cmake_minimum_required(VERSION 3.26)
project(UEL_BeeCrowd)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(jogoSimples
        "Estudos C++/jogoSimples.cpp")

add_executable(jogoSimplesComString
        "Estudos C++/jogoSimplesComString.cpp")

add_executable(BEE1000
        "Resolucoes C++/BEE 1000.cpp")

add_executable(BEE1061
        "Resolucoes C++/BEE 1061.cpp")

add_executable(BEE1179
        "Resolucoes C++/BEE 1179.cpp")

add_executable(BEE1181
        "Resolucoes C++/BEE 1181.cpp")

add_executable(BEE1837
        "Resolucoes C++/BEE 1837.cpp")

add_executable(BEE2709
        "Resolucoes C++/BEE 2709.cpp")

add_executable(BEE2963
        "Resolucoes C++/BEE 2963.cpp")

add_executable(BEE2633
        "Resolucoes C++/BEE 2633.cpp")

add_executable(BEE3343
        "Resolucoes C++/BEE 3343.cpp")

add_executable(BEE1188
        "Resolucoes C++/BEE 1188.cpp")



add_executable(BEE2414
        "Resolucoes C++/BEE 2414.cpp")
